--- a/style.css
+++ b/style.css
@@ -10,3 +10,53 @@ h2 {
     width: 70%;
     margin: 0 auto;
 }
+
+input {
+    width: 100%;
+    padding: 15px;
+    margin: 8px;
+    border: 1.2px solid #000;
+    font-size: 18px;
+}
+
+::placeholder{
+    text-align: center;
+}
+
+.gendercontainer {
+    text-align: center;
+    font-size: 18px;
+    
+}
+
+.gender1 {
+    width: 10%;
+}
+
+
+label {
+    font-weight: bold;
+    padding: 10px;
+    font-size: 20px;
+}
+
+.btn{
+    text-align: center;
+    margin: 10px;
+}
+
+button {
+    padding: 10px;
+    width: 20%;
+    border-radius: 10px;
+    background-color: rgb(32, 160, 32);
+    color: white;
+    font-size: 15px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
