--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: linear-gradient(to right, yellow, white, yellow);
+    height: 100vh;
+}
+
 h2 {
     text-align: center;
 }
